Update to model

--- a/modeling/Linear Regression Model.ipynb
+++ b/modeling/Linear Regression Model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {
     "scrolled": true
    },
@@ -20,31 +20,29 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                quality   R-squared:                       0.361\n",
-      "Model:                            OLS   Adj. R-squared:                  0.358\n",
-      "Method:                 Least Squares   F-statistic:                     102.7\n",
-      "Date:                Sat, 05 Dec 2020   Prob (F-statistic):          4.31e-119\n",
-      "Time:                        09:02:39   Log-Likelihood:                -1254.9\n",
-      "No. Observations:                1279   AIC:                             2526.\n",
-      "Df Residuals:                    1271   BIC:                             2567.\n",
-      "Df Model:                           7                                         \n",
+      "Dep. Variable:                quality   R-squared:                       0.570\n",
+      "Model:                            OLS   Adj. R-squared:                  0.560\n",
+      "Method:                 Least Squares   F-statistic:                     57.77\n",
+      "Date:                Sat, 05 Dec 2020   Prob (F-statistic):           4.35e-38\n",
+      "Time:                        10:29:31   Log-Likelihood:                -299.78\n",
+      "No. Observations:                 224   AIC:                             611.6\n",
+      "Df Residuals:                     218   BIC:                             632.0\n",
+      "Df Model:                           5                                         \n",
       "Covariance Type:            nonrobust                                         \n",
-      "========================================================================================\n",
-      "                           coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "----------------------------------------------------------------------------------------\n",
-      "const                    5.6205      0.018    310.332      0.000       5.585       5.656\n",
-      "volatile acidity        -0.1899      0.020     -9.366      0.000      -0.230      -0.150\n",
-      "chlorides               -0.0837      0.021     -4.056      0.000      -0.124      -0.043\n",
-      "free sulfur dioxide      0.0659      0.025      2.629      0.009       0.017       0.115\n",
-      "total sulfur dioxide    -0.1110      0.026     -4.276      0.000      -0.162      -0.060\n",
-      "pH                      -0.0546      0.021     -2.637      0.008      -0.095      -0.014\n",
-      "sulphates                0.1370      0.021      6.569      0.000       0.096       0.178\n",
-      "alcohol                  0.3077      0.020     15.504      0.000       0.269       0.347\n",
+      "====================================================================================\n",
+      "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------------\n",
+      "const                6.3185      0.063    100.968      0.000       6.195       6.442\n",
+      "volatile acidity    -0.4579      0.080     -5.730      0.000      -0.615      -0.300\n",
+      "chlorides           -0.2603      0.068     -3.810      0.000      -0.395      -0.126\n",
+      "pH                  -0.2657      0.073     -3.632      0.000      -0.410      -0.122\n",
+      "sulphates            0.2849      0.072      3.975      0.000       0.144       0.426\n",
+      "alcohol              0.5812      0.070      8.286      0.000       0.443       0.719\n",
       "==============================================================================\n",
-      "Omnibus:                       25.764   Durbin-Watson:                   2.001\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               37.827\n",
-      "Skew:                          -0.201   Prob(JB):                     6.11e-09\n",
-      "Kurtosis:                       3.740   Cond. No.                         2.51\n",
+      "Omnibus:                        4.883   Durbin-Watson:                   1.666\n",
+      "Prob(Omnibus):                  0.087   Jarque-Bera (JB):                4.523\n",
+      "Skew:                          -0.304   Prob(JB):                        0.104\n",
+      "Kurtosis:                       3.338   Cond. No.                         2.32\n",
       "==============================================================================\n",
       "\n",
       "Warnings:\n",
@@ -67,19 +65,22 @@
     "red_data= pd.read_csv(\"winequality-red.csv\", delimiter=';')\n",
     "white_data= pd.read_csv(\"winequality-white.csv\", delimiter=';')\n",
     "\n",
+    "##Removing average values\n",
+    "red_data_mid_removed = red_data[red_data['quality'] != 5]\n",
+    "red_data_mid_removed = red_data_mid_removed[red_data_mid_removed['quality'] != 6]\n",
     "\n",
-    "X = red_data.drop(columns = ['quality'])\n",
-    "y = red_data['quality'] #is is what I'm predicting\n",
+    "X = red_data_mid_removed.drop(columns = ['quality'])\n",
+    "y = red_data_mid_removed['quality'] #is is what I'm predicting\n",
     "           \n",
     "#ran the model,iterating and removing values that have a p value of >0.05\n",
-    "X= X.drop(columns=['residual sugar' , 'density', 'fixed acidity' , 'citric acid'])\n",
+    "X= X.drop(columns=['citric acid', 'density', 'residual sugar', 'fixed acidity', 'free sulfur dioxide', 'total sulfur dioxide'])\n",
     "\n",
     "    \n",
-    "scale_col = ['volatile acidity', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'pH', 'sulphates', 'alcohol']\n",
+    "scale_col = ['volatile acidity', 'chlorides', 'pH', 'sulphates', 'alcohol']\n",
     "scaler = StandardScaler()\n",
     "X[scale_col] = scaler.fit_transform(X[scale_col])\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 1000)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 100)\n",
     "\n",
     "##Perfoming linear regression here\n",
     "X_train_sm = sm.add_constant(X_train)\n",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -108,30 +109,32 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                quality   R-squared:                       0.271\n",
-      "Model:                            OLS   Adj. R-squared:                  0.270\n",
-      "Method:                 Least Squares   F-statistic:                     242.3\n",
-      "Date:                Thu, 03 Dec 2020   Prob (F-statistic):          4.98e-264\n",
-      "Time:                        22:50:24   Log-Likelihood:                -4434.6\n",
-      "No. Observations:                3918   AIC:                             8883.\n",
-      "Df Residuals:                    3911   BIC:                             8927.\n",
-      "Df Model:                           6                                         \n",
+      "Dep. Variable:                quality   R-squared:                       0.416\n",
+      "Model:                            OLS   Adj. R-squared:                  0.414\n",
+      "Method:                 Least Squares   F-statistic:                     191.5\n",
+      "Date:                Sat, 05 Dec 2020   Prob (F-statistic):          1.01e-244\n",
+      "Time:                        10:29:42   Log-Likelihood:                -2863.3\n",
+      "No. Observations:                2160   AIC:                             5745.\n",
+      "Df Residuals:                    2151   BIC:                             5796.\n",
+      "Df Model:                           8                                         \n",
       "Covariance Type:            nonrobust                                         \n",
-      "====================================================================================\n",
-      "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------------\n",
-      "const                5.8796      0.012    489.852      0.000       5.856       5.903\n",
-      "volatile acidity    -0.1930      0.012    -15.992      0.000      -0.217      -0.169\n",
-      "residual sugar       0.3527      0.030     11.908      0.000       0.295       0.411\n",
-      "density             -0.3351      0.042     -8.047      0.000      -0.417      -0.253\n",
-      "pH                   0.0693      0.013      5.440      0.000       0.044       0.094\n",
-      "sulphates            0.0658      0.012      5.288      0.000       0.041       0.090\n",
-      "alcohol              0.2840      0.025     11.312      0.000       0.235       0.333\n",
+      "=======================================================================================\n",
+      "                          coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "---------------------------------------------------------------------------------------\n",
+      "const                   5.7728      0.020    293.832      0.000       5.734       5.811\n",
+      "fixed acidity           0.1629      0.036      4.544      0.000       0.093       0.233\n",
+      "volatile acidity       -0.2545      0.020    -12.804      0.000      -0.293      -0.215\n",
+      "residual sugar          0.7876      0.076     10.317      0.000       0.638       0.937\n",
+      "free sulfur dioxide     0.0751      0.021      3.587      0.000       0.034       0.116\n",
+      "density                -1.0295      0.122     -8.463      0.000      -1.268      -0.791\n",
+      "pH                      0.1896      0.031      6.103      0.000       0.129       0.251\n",
+      "sulphates               0.1072      0.021      5.005      0.000       0.065       0.149\n",
+      "alcohol                 0.1943      0.069      2.829      0.005       0.060       0.329\n",
       "==============================================================================\n",
-      "Omnibus:                       77.742   Durbin-Watson:                   1.977\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              156.791\n",
-      "Skew:                           0.076   Prob(JB):                     8.98e-35\n",
-      "Kurtosis:                       3.968   Cond. No.                         7.07\n",
+      "Omnibus:                       29.628   Durbin-Watson:                   2.015\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               52.206\n",
+      "Skew:                           0.030   Prob(JB):                     4.61e-12\n",
+      "Kurtosis:                       3.759   Cond. No.                         13.4\n",
       "==============================================================================\n",
       "\n",
       "Warnings:\n",
@@ -140,18 +143,22 @@
     }
    ],
    "source": [
-    "X = white_data.drop(columns = ['quality'])\n",
-    "y = white_data['quality'] #is is what I'm predicting\n",
-    "           \n",
+    "##Removing average values\n",
+    "white_data_mid_removed = white_data[white_data['quality'] != 6]\n",
+    "# white_data_mid_removed = white_data_mid_removed[white_data_mid_removed['quality'] != 7]\n",
+    "\n",
+    "X = white_data_mid_removed.drop(columns = ['quality'])\n",
+    "y = white_data_mid_removed['quality'] #is is what I'm predicting\n",
+    "\n",
     "#ran the model,iterating and removing values that have a p value of >0.05\n",
-    "X= X.drop(columns=['chlorides', 'citric acid', 'total sulfur dioxide', 'fixed acidity', 'free sulfur dioxide'])\n",
+    "X= X.drop(columns=['citric acid',  'total sulfur dioxide', 'chlorides'])\n",
     "\n",
     "    \n",
-    "scale_col = ['residual sugar', 'density', 'volatile acidity','pH', 'sulphates', 'alcohol']\n",
+    "scale_col = ['fixed acidity', 'free sulfur dioxide','residual sugar', 'density', 'volatile acidity','pH', 'sulphates', 'alcohol']\n",
     "scaler = StandardScaler()\n",
     "X[scale_col] = scaler.fit_transform(X[scale_col])\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 1000)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 100)\n",
     "\n",
     "##Perfoming linear regression here\n",
     "X_train_sm = sm.add_constant(X_train)\n",
