--- a/Technical Report/Technical Report.ipynb
+++ b/Technical Report/Technical Report.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -90,8 +90,7 @@
       "This is the shape of red wine data: (1599, 12)\n",
       "This is the shape of white wine data: (4898, 12) \n",
       "\n",
-      "\n",
-      " This is a count of each features empty values\n",
+      "This is a count of each features empty values\n",
       "fixed acidity           0\n",
       "volatile acidity        0\n",
       "citric acid             0\n",
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -152,11 +151,11 @@
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x00000226F53D41C0>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x0000011DDE485D90>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -175,8 +174,7 @@
    ],
    "source": [
     "#Showing distribution of white wine quality\n",
-    "white_data['quality'].plot(kind='hist',subplots=True,sharex=True,sharey=True,title='Histogram of Quality Ratings of White Wine')\n",
-    "set_xlabel(\"Occurennces\")"
+    "white_data['quality'].plot(kind='hist',subplots=True,sharex=True,sharey=True,title='Histogram of Quality Ratings of White Wine')"
    ]
   },
   {
@@ -184,7 +182,7 @@
    "metadata": {},
    "source": [
     "## Description of what was found during EDA\n",
-    "As you can see above, there are a lot of 5 and 6-level quality of Red Wines, and a lot of 6 and 7-level quality of White Wines. As you will see further along, this imbalance can create a challenge when building a model predicting quality. "
+    "As you can see above, there are a lot of 5 and 6-level quality of Red Wines, and a lot of 6 and 7-level quality of White Wines. As you will see further along, this class imbalance can create a challenge when building a model predicting quality. "
    ]
   },
   {
@@ -205,6 +203,7 @@
     "# First cut analysis of how each variable effects red wine quality based on scatterplots\n",
     "#### fixed acidity\n",
     "slight boomerang affect. at lower values, it improves quality, but then appears to have less of an affect\n",
+    "when I say 'boomerang,' I mean that it looks like a positive correlation at lower values, and a negative correlation at higher quality values\n",
     "#### volatile acidity\n",
     "negative relationship between volatile acididity and quality\n",
     "#### citric acid\n",
@@ -270,18 +269,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "If you are showing a plot make sure that there is a title, axes are labeled and you explained why you are showing me this plot (it's connection to the problem and solution).\n",
-    "\n",
-    "If you are working with a supervised learning problem, talk about the target variable. It's distribution, class imbalance etc.\n",
-    "\n",
     "# Prepare Data\n",
     "\n",
     "Because this dataset was very clean (no missing or invalid values), there was not much preparation required. Once it was downloaded, I could begin EDA.\n",
@@ -305,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -320,7 +308,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.362\n",
       "Method:                 Least Squares   F-statistic:                     121.8\n",
       "Date:                Sun, 06 Dec 2020   Prob (F-statistic):          1.05e-121\n",
-      "Time:                        13:18:15   Log-Likelihood:                -1256.2\n",
+      "Time:                        13:41:36   Log-Likelihood:                -1256.2\n",
       "No. Observations:                1279   AIC:                             2526.\n",
       "Df Residuals:                    1272   BIC:                             2563.\n",
       "Df Model:                           6                                         \n",
@@ -390,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -405,7 +393,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.285\n",
       "Method:                 Least Squares   F-statistic:                     196.3\n",
       "Date:                Sun, 06 Dec 2020   Prob (F-statistic):          7.33e-280\n",
-      "Time:                        13:24:12   Log-Likelihood:                -4420.9\n",
+      "Time:                        13:41:40   Log-Likelihood:                -4420.9\n",
       "No. Observations:                3918   AIC:                             8860.\n",
       "Df Residuals:                    3909   BIC:                             8916.\n",
       "Df Model:                           8                                         \n",
@@ -482,13 +470,53 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Red Wine, Final Model"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                quality   R-squared:                       0.570\n",
+      "Model:                            OLS   Adj. R-squared:                  0.560\n",
+      "Method:                 Least Squares   F-statistic:                     57.77\n",
+      "Date:                Sun, 06 Dec 2020   Prob (F-statistic):           4.35e-38\n",
+      "Time:                        13:41:50   Log-Likelihood:                -299.78\n",
+      "No. Observations:                 224   AIC:                             611.6\n",
+      "Df Residuals:                     218   BIC:                             632.0\n",
+      "Df Model:                           5                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "====================================================================================\n",
+      "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------------\n",
+      "const                6.3185      0.063    100.968      0.000       6.195       6.442\n",
+      "volatile acidity    -0.4579      0.080     -5.730      0.000      -0.615      -0.300\n",
+      "chlorides           -0.2603      0.068     -3.810      0.000      -0.395      -0.126\n",
+      "pH                  -0.2657      0.073     -3.632      0.000      -0.410      -0.122\n",
+      "sulphates            0.2849      0.072      3.975      0.000       0.144       0.426\n",
+      "alcohol              0.5812      0.070      8.286      0.000       0.443       0.719\n",
+      "==============================================================================\n",
+      "Omnibus:                        4.883   Durbin-Watson:                   1.666\n",
+      "Prob(Omnibus):                  0.087   Jarque-Bera (JB):                4.523\n",
+      "Skew:                          -0.304   Prob(JB):                        0.104\n",
+      "Kurtosis:                       3.338   Cond. No.                         2.32\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
    "source": [
     "##Removing average values\n",
     "red_data_mid_removed = red_data[red_data['quality'] != 5]\n",
@@ -500,7 +528,6 @@
     "#ran the model,iterating and removing values that have a p value of >0.05\n",
     "X= X.drop(columns=['citric acid', 'density', 'residual sugar', 'fixed acidity', 'free sulfur dioxide', 'total sulfur dioxide'])\n",
     "\n",
-    "    \n",
     "scale_col = ['volatile acidity', 'chlorides', 'pH', 'sulphates', 'alcohol']\n",
     "scaler = StandardScaler()\n",
     "X[scale_col] = scaler.fit_transform(X[scale_col])\n",
@@ -511,7 +538,157 @@
     "X_train_sm = sm.add_constant(X_train)\n",
     "lr = sm.OLS(y_train, X_train_sm).fit()\n",
     "\n",
-    "# OLS results"
+    "# OLS results\n",
+    "print(lr.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, the R-squared value has increased significantly be removing samples of quality 5 and 6. The r-squared value is now 0.57, which means more than half of the outcome can be explained by the model. Previously the r-squared value was 0.365."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## White Wine, Final Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                quality   R-squared:                       0.416\n",
+      "Model:                            OLS   Adj. R-squared:                  0.414\n",
+      "Method:                 Least Squares   F-statistic:                     191.5\n",
+      "Date:                Sun, 06 Dec 2020   Prob (F-statistic):          1.01e-244\n",
+      "Time:                        14:01:53   Log-Likelihood:                -2863.3\n",
+      "No. Observations:                2160   AIC:                             5745.\n",
+      "Df Residuals:                    2151   BIC:                             5796.\n",
+      "Df Model:                           8                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=======================================================================================\n",
+      "                          coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "---------------------------------------------------------------------------------------\n",
+      "const                   5.7728      0.020    293.832      0.000       5.734       5.811\n",
+      "fixed acidity           0.1629      0.036      4.544      0.000       0.093       0.233\n",
+      "volatile acidity       -0.2545      0.020    -12.804      0.000      -0.293      -0.215\n",
+      "residual sugar          0.7876      0.076     10.317      0.000       0.638       0.937\n",
+      "free sulfur dioxide     0.0751      0.021      3.587      0.000       0.034       0.116\n",
+      "density                -1.0295      0.122     -8.463      0.000      -1.268      -0.791\n",
+      "pH                      0.1896      0.031      6.103      0.000       0.129       0.251\n",
+      "sulphates               0.1072      0.021      5.005      0.000       0.065       0.149\n",
+      "alcohol                 0.1943      0.069      2.829      0.005       0.060       0.329\n",
+      "==============================================================================\n",
+      "Omnibus:                       29.628   Durbin-Watson:                   2.015\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               52.206\n",
+      "Skew:                           0.030   Prob(JB):                     4.61e-12\n",
+      "Kurtosis:                       3.759   Cond. No.                         13.4\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Removing average values\n",
+    "white_data_mid_removed = white_data[white_data['quality'] != 6]\n",
+    "\n",
+    "X = white_data_mid_removed.drop(columns = ['quality'])\n",
+    "y = white_data_mid_removed['quality'] #is is what I'm predicting\n",
+    "\n",
+    "#ran the model,iterating and removing values that have a p value of >0.05\n",
+    "X= X.drop(columns=['citric acid',  'total sulfur dioxide', 'chlorides'])\n",
+    "    \n",
+    "scale_col = ['fixed acidity', 'free sulfur dioxide','residual sugar', 'density', 'volatile acidity','pH', 'sulphates', 'alcohol']\n",
+    "scaler = StandardScaler()\n",
+    "X[scale_col] = scaler.fit_transform(X[scale_col])\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 100)\n",
+    "\n",
+    "##Perfoming linear regression here\n",
+    "X_train_sm = sm.add_constant(X_train)\n",
+    "lr = sm.OLS(y_train, X_train_sm).fit()\n",
+    "\n",
+    "# OLS results\n",
+    "print(lr.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The r-squared value only came up to 0.416, but this is still a significat improvement from the 0.287 initially run, before the average values were removed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Present Your Solution\n",
+    "### Red Wine\n",
+    "Here are the results of red wine:\n",
+    "\n",
+    "    const                6.3185\n",
+    "    \n",
+    "    feature              coefficient\n",
+    "    volatile acidity    -0.4579\n",
+    "    chlorides           -0.2603\n",
+    "    pH                  -0.2657\n",
+    "    sulphates            0.2849\n",
+    "    alcohol              0.5812\n",
+    "\n",
+    "Alcohol has the strongest correlation with red wine quality, which is positive.\n",
+    "Volatile acididity has the second strongest correlation, and it is negative.\n",
+    "\n",
+    "Sulphates have a positive correlation, and both chlorides and pH have negative correlations with quality.\n",
+    "\n",
+    "### White Wine\n",
+    "Here are the results of white wine:\n",
+    "\n",
+    "    const                   5.7728\n",
+    "    \n",
+    "    feature              coefficient\n",
+    "    fixed acidity           0.1629\n",
+    "    volatile acidity       -0.2545\n",
+    "    residual sugar          0.7876\n",
+    "    free sulfur dioxide     0.0751\n",
+    "    density                -1.0295\n",
+    "    pH                      0.1896\n",
+    "    sulphates               0.1072\n",
+    "    alcohol                 0.1943\n",
+    "\n",
+    "Density has the strongest correlation with white wine quality, and it's a negative correlation. Between that and residual sugar, which has a positive correlation, they  far and away correlate strongest with white wine quality.\n",
+    "\n",
+    "The remaining positive correlators are fixed acidity, free sulfur dioxide, sulfates, and alcohol.\n",
+    "The only other negative correlator is volatile acidity.\n",
+    "\n",
+    "## Certainty of results\n",
+    "This model is accurate for the data provided, but I would have liked to see the r-squared value higher. There is some obvious subjectivity to the wine quality, and it is only given in integers, so there is some fidelity lost.\n",
+    "Another area that could result in lower result is if features are not linear correlated with quality. For example, some features appear to have a positive correlation at lower quality values, but moves to a negative correlation for higher quality values, indicating a 'Sweet Spot,', and looking a little bit like a boomerang on the charts.\n",
+    "\n",
+    "## Limitations\n",
+    "what are some limitations of your work?\n",
+    "\n",
+    "In order to get a more instructive model, I had to remove average values. This does change the results a little bit, in the senese that this model would not be used to determine the difference wine that could be rated a 5 or a 6. Because the bulk of the wine was rated close to average, a fair amount of wine was thrown out of the training model. That's OK, in my mind, because the average wine isn't interesting to begin with. I wanted to be able to predict if wine was of high quality or low quality. If it has some features that make up both, it's likely closer to average anyway, so it's still an informative model.\n",
+    "\n",
+    "One limitation of the data is that there wasn't a lot of low quality or high quality wine in the dataset. This would have made my model stronger, as I wouldn't have had to remove as high a percentage of wines from the training model.\n",
+    "\n",
+    "After I completed this project, I did look for other analysis on this dataset. This one took a different approach, but categorizing \"good\" or \"bad\" wine based on its quality rating, and performing logistic regression based on that. It's an interesting take, but they appear to have kept average values in, when the average values don't inform as much on whether wine is good or bad.\n",
+    "https://www.kaggle.com/vishalyo990/prediction-of-quality-of-wine"
    ]
   },
   {
@@ -519,19 +696,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "# Present Your Solution\n",
-    "What are your results? Why?\n",
-    "\n",
-    "You must connect this part to the original business problem.\n",
-    "\n",
-    "How certain are you of your results?\n",
-    "\n",
-    "What are some limitations of your work?\n",
-    "\n",
-    "Compared to others' work in this field, how is your result? Above expectations? Why? Below expectations? Why?"
-   ]
+   "source": []
   }
  ],
  "metadata": {
