--- a/Technical Report/Technical Report.ipynb
+++ b/Technical Report/Technical Report.ipynb
@@ -26,6 +26,8 @@
     "## Background and Research\n",
     "\n",
     "I didn't look for any other analysis on this dataset, but I'm sure it's been analyzed a lot in academic settings, as it's an easy-find, clean data set on UCI.\n",
+    "Update: after I finished my model, I did find a couple of examples with the same dataset; I review those in the final section of this report.\n",
+    "\n",
     "# Get the data\n",
     "## Who?\n",
     "\n",
@@ -681,14 +683,15 @@
     "Another area that could result in lower result is if features are not linear correlated with quality. For example, some features appear to have a positive correlation at lower quality values, but moves to a negative correlation for higher quality values, indicating a 'Sweet Spot,', and looking a little bit like a boomerang on the charts.\n",
     "\n",
     "## Limitations\n",
-    "what are some limitations of your work?\n",
     "\n",
     "In order to get a more instructive model, I had to remove average values. This does change the results a little bit, in the senese that this model would not be used to determine the difference wine that could be rated a 5 or a 6. Because the bulk of the wine was rated close to average, a fair amount of wine was thrown out of the training model. That's OK, in my mind, because the average wine isn't interesting to begin with. I wanted to be able to predict if wine was of high quality or low quality. If it has some features that make up both, it's likely closer to average anyway, so it's still an informative model.\n",
     "\n",
     "One limitation of the data is that there wasn't a lot of low quality or high quality wine in the dataset. This would have made my model stronger, as I wouldn't have had to remove as high a percentage of wines from the training model.\n",
     "\n",
     "After I completed this project, I did look for other analysis on this dataset. This one took a different approach, but categorizing \"good\" or \"bad\" wine based on its quality rating, and performing logistic regression based on that. It's an interesting take, but they appear to have kept average values in, when the average values don't inform as much on whether wine is good or bad.\n",
-    "https://www.kaggle.com/vishalyo990/prediction-of-quality-of-wine"
+    "https://www.kaggle.com/vishalyo990/prediction-of-quality-of-wine\n",
+    "\n",
+    "This example took a similar approach as the first, but removed the average values, like I suggested: https://www.kaggle.com/muammerhuseyinoglu/prediction-of-wine-quality"
    ]
   },
   {
