--- a/EDA/Wine_EDA.ipynb
+++ b/EDA/Wine_EDA.ipynb
@@ -265,6 +265,7 @@
     "# First cut analysis of how each variable effects  red wine quality based on scatterplots\n",
     "#### fixed acidity\n",
     "slight boomerang affect. at lower values, it improves quality, but then appears to have less of an affect\n",
+    "when I say 'boomerang,' I mean that it looks like a positive correlation at lower values, and a negative correlation at higher quality values\n",
     "#### volatile acidity\n",
     "negative relationship between volatile acididity and quality\n",
     "#### citric acid\n",
@@ -898,34 +899,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "fixed acidity           0\n",
-       "volatile acidity        0\n",
-       "citric acid             0\n",
-       "residual sugar          0\n",
-       "chlorides               0\n",
-       "free sulfur dioxide     0\n",
-       "total sulfur dioxide    0\n",
-       "density                 0\n",
-       "pH                      0\n",
-       "sulphates               0\n",
-       "alcohol                 0\n",
-       "quality                 0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pandas version is  1.0.5\n",
+      "numpy version is  1.18.5\n",
+      "matplotlib version is  3.2.2\n",
+      "seaborn version is  0.10.1\n",
+      "sklearn version is 0.23.1\n"
+     ]
     }
    ],
    "source": [
-    "red_data.isnull().sum()"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "import sklearn\n",
+    "\n",
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
+    "# import matplotlib as plt\n",
+    "# import seaborn as sns\n",
+    "\n",
+    "print('pandas version is ', pd.__version__)\n",
+    "print('numpy version is ', np.__version__)\n",
+    "print('matplotlib version is ', plt.__version__)\n",
+    "print('seaborn version is ', sns.__version__)\n",
+    "\n",
+    "print('sklearn version is', sklearn.__version__)"
    ]
   }
  ],
